# ideas

./: .env  FBcondig.json  Key.json  Procfile  procfile  pyproject.toml  requirements.txt
ideas/: app.py  config.py  functions.py  viewModel.py
ideas/templates/: basic-layout.html  editprof.html  idea.html  index.html  layout.html  login.html  signup.html  userprofile.html
tests/: test_ideas.py
