[tool.poetry]
name = "ideas"
version = "0.1.0"
description = ""
authors = ["scottamass <scot.atkinson@live.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
firebase-admin = "^5.2.0"
Pyrebase4 = "^4.5.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
